--- a/conf/simple-site-backup.ini
+++ b/conf/simple-site-backup.ini
@@ -1,15 +1,11 @@
 [backup-settings]
 backup_root_path = /backups
-backup_files_path = files
-backup_db_path = databases
+backup_files_dir = files
+backup_db_dir = databases
 
 [defaults]
-bkps_keep_days = 0
-s3_sync = False
-s3_bucket = default_bucket
-aws_access_key = ''
-aws_secret_key = ''
-aws_region = ''
+bkps_keep_days = 7
+aws_s3_sync = no
 
 [example]
 www_data_path = /tmp/testbak/
@@ -18,5 +14,7 @@ mysql_host = localhost
 mysql_user = example_db_user
 mysql_pass = example_db_pass
 bkps_keep_days = 7
-s3_sync = True
-s3_bucket = example_bucket
+aws_s3_sync = yes
+aws_s3_bucket = setevoy-example-bucket
+aws_access_key = EXAMPLEKEY
+aws_secret_key = EXAMPLESECRET
